# applytex

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SMARTJOBAPPLY_PLAN.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
benchmark_data/: CHANGELOG.md  NOTICE.md  README.md
benchmark_data/fixtures/jobs/: adversarial-001-excessive_tools.md  adversarial-002-conflicting_seniority.md  adversarial-003-vague_requirements.md  adversarial-004-domain_heavy.md  adversarial-005-keyword_repetition.md  adversarial-006-missing_sections.md  adversarial-007-unrealistic_experience.md  adversarial-008-mixed_role.md  adversarial-009-excessive_tools.md  adversarial-010-conflicting_seniority.md  adversarial-011-vague_requirements.md  adversarial-012-domain_heavy.md  adversarial-013-keyword_repetition.md  adversarial-014-missing_sections.md  adversarial-015-unrealistic_experience.md  adversarial-016-mixed_role.md  adversarial-017-excessive_tools.md  adversarial-018-conflicting_seniority.md  adversarial-019-vague_requirements.md  adversarial-020-domain_heavy.md  taxonomy-002-ml_engineer-junior.md  taxonomy-006-data_engineer-junior.md  taxonomy-009-data_scientist-mid.md  taxonomy-011-nlp_llm_engineer-mid.md  taxonomy-014-ml_engineer-senior.md  taxonomy-015-data_scientist-senior.md  taxonomy-017-nlp_llm_engineer-senior.md  taxonomy-018-data_engineer-senior.md  taxonomy-019-ai_engineer-staff.md  taxonomy-020-ml_engineer-staff.md  taxonomy-021-data_scientist-staff.md  taxonomy-022-mlops_engineer-staff.md  taxonomy-023-nlp_llm_engineer-staff.md  taxonomy-024-data_engineer-staff.md  (+10 more)
benchmark_data/manifests/: cases.jsonl  jobs.jsonl  live_job_boards.json  resumes.jsonl
docs/: ARCHITECTURE.md  AUTH.md  JOBRIGHT_AND_ATS_AUDIT.md  JOB_AUTOMATION_ARCHITECTURE.md  MODEL_ROUTING.md  PORTFOLIO.md  RELEASE_CHECKLIST.md  ats_ai_screening_research.md
extension/: README.md  background.js  manifest.json  panel-fill.js  panel-scan.js  panel-shared.js  panel-workday.js  panel.js  popup.html  popup.js  providers.js
extension/legacy/: popup.css  popup.html  popup.js
frontend/: README.md  package-lock.json  package.json  tailwind.config.ts
frontend/scripts/: ui-audit-extended.mjs  ui-audit.mjs
samples/: sample_resume.tex
samples/job_descriptions/: airops_data_scientist.md  darkwolf_ml_engineer.md  dropbox_senior_mle_conversational_ai.md  optum_ai_ml_engineer.md  sumologic_senior_mle_agentic_ai.md
scripts/: api_smoke.py  extension_platform_qa.mjs  smoke_report.py  test_increment2.py
src/latex_resume/: __init__.py  api.py  application_answers.py  application_store.py  artifact_files.py  ats.py  change_validation.py  engine.py  evaluation.py  extractor.py  form_resolution.py  job_keywords.py  job_matching.py  job_models.py  job_sources.py  langchain_reviewer.py  llm.py  llm_routing.py  local_auth.py  models.py  naturalness.py  optimizer.py  parser.py  profile_extraction.py  project_library.py  project_scoring.py  prompts.py  reconstructor.py  renderer.py  run_analysis.py  screening.py  session.py  skill_planning.py  streamlit_app.py  tailor_store.py  tracing.py
tests/: conftest.py  test_api.py  test_application_answers.py  test_benchmark.py  test_durability.py  test_evaluation.py  test_extension.py  test_job_search.py  test_llm.py  test_local_auth.py  test_optimizer.py  test_parser.py  test_profile_extraction.py  test_project_library.py  test_project_scoring.py  test_reconstructor.py  test_renderer.py  test_roundtrip.py  test_run_analysis.py  test_screening.py  test_system_smoke.py  test_tracing.py
(+124 files in other folders)
